# DeepThinkers

./: openenv.yaml  pyproject.toml  requirements.txt  results.json  run_local.bat  run_local.sh  test_environment.py  test_overfitting.py  validate.py
data/: __init__.py  emails.py  hard.json
email triage system/email triage system/: Dockerfile  README.md  inference.py  plot_metrics.py
email triage system/email triage system/data/: easy.json  medium.json
email triage system/email triage system/server/: __init__.py
server/: app.py  environment.py  graders.py  models.py
