[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email Triage OpenEnv Benchmark Environment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sanchaynaresh-01"}
]
keywords = ["openenv", "email", "triage", "benchmark", "ai", "llm"]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "openai==1.57.0",
    "requests==2.32.3",
    "httpx==0.28.1",
    "python-multipart==0.0.19",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools]
packages = ["server", "data"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
